Fix/submit styles on iphone (#988)
* Fix wrong button style name

* Switch off appearance in stylesheets #985

--- a/app/assets/stylesheets/globals/common.sass
+++ b/app/assets/stylesheets/globals/common.sass
@@ -174,6 +174,9 @@ blockquote
 .hljs
   background: #e8eff1 !important
 
+.toggle-button
+  +toggle_button
+
 pre
   +border-radius(4px)
   background: #e8eff1
@@ -187,10 +190,8 @@ pre
     margin-bottom: 0px
 
 code
-  background: #e8eff1
-
-code
   +border-radius(4px)
+  background: #e8eff1
   font-size: 15px
   padding: 2px 4px
 
